fixed previous commit not working on mobile

--- a/styles.css
+++ b/styles.css
@@ -156,9 +156,16 @@ h2 {
         bottom: 0;
         left: 0;
         transform: translateY(100%);
+        display: flex;
+        flex-direction: column;
     }
 
     #sidebar.active {
         transform: translateY(0);
+    }
+
+    #info {
+        flex-grow: 1;
+        overflow-y: auto;
     }
 }
